<!--
Copyright 2019 Xavier Freyburger

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

   http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<resources>
    <!-- Main strings -->
    <string name="app_name" translatable="false">Tempus Romanum</string>
    <string name="action_settings">Settings</string>
    <string name="appwidget_text" translatable="false">Tempus Romanum</string>
    <string name="add_widget">Add widget</string>
    <string name="title_activity_settings">Settings</string>
    <string name="text_copied_to_clipboard">The text has been copied to the clipboard</string>
    <string name="date_reset">The date has been reset</string>
    <string name="era_bc">B.C.</string>
    <string name="era_ad">A.D.</string>
    <string name="date_separator" translatable="false">/</string>
    <string name="latin_locale_code" translatable="false">la</string>
    <string name="number_error">This number is wrong</string>
    <string name="notification_channel" translatable="false">Tempus Romanum</string>
    <string name="notification_switch" translatable="false">notify</string>
    <string name="nones_label">Nones: </string>
    <string name="ides_label">Ides: </string>
    <string name="request_permission_notifications">Notifications are disabled.\nPlease accept the permission request on the next screen to re-enable them.</string>
    <string name="request_permission_notifications_channel">Notification channel is disabled.\nPlease enable it on the next screen.</string>
    <string name="notification_premission_error">Notifications are disabled in system settings</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="open">Open</string>
    <string name="clipboard_copy">Copy</string>
    <string name="today">Today</string>

    <!-- Notifications strings -->
    <string name="notification_nones_title">"Today it's the nones "</string>
    <string name="notification_ides_title">"Today it's the ides "</string>
    <string name="notification_rome_founding_title">It\'s the founding of Rome anniversary</string>

    <!-- Day and month picker -->
    <string name="num_1">1</string>
    <string name="num_2">2</string>
    <string name="num_3">3</string>
    <string name="num_4">4</string>
    <string name="num_5">5</string>
    <string name="num_6">6</string>
    <string name="num_7">7</string>
    <string name="num_8">8</string>
    <string name="num_9">9</string>
    <string name="num_10">10</string>
    <string name="num_11">11</string>
    <string name="num_12">12</string>
    <string name="num_13">13</string>
    <string name="num_14">14</string>
    <string name="num_15">15</string>
    <string name="num_16">16</string>
    <string name="num_17">17</string>
    <string name="num_18">18</string>
    <string name="num_19">19</string>
    <string name="num_20">20</string>
    <string name="num_21">21</string>
    <string name="num_22">22</string>
    <string name="num_23">23</string>
    <string name="num_24">24</string>
    <string name="num_25">25</string>
    <string name="num_26">26</string>
    <string name="num_27">27</string>
    <string name="num_28">28</string>
    <string name="num_29">29</string>
    <string name="num_30">30</string>
    <string name="num_31">31</string>
    <string name="num_36">36</string>

    <!-- Months -->
    <string name="month_1">of January</string>
    <string name="month_2">of February</string>
    <string name="month_3">of March</string>
    <string name="month_4">of April</string>
    <string name="month_5">of May</string>
    <string name="month_6">of June</string>
    <string name="month_7">of July</string>
    <string name="month_8">of August</string>
    <string name="month_9">of September</string>
    <string name="month_10">of October</string>
    <string name="month_11">of November</string>
    <string name="month_12">of December</string>

    <!-- Preference Titles -->
    <string name="preference_file_key" translatable="false">com.dev.xavier.tempusromanum.PREFERENCE_FILE_KEY</string>
    <!-- 1. Widget font -->
    <string name="widget_font_header">Widget</string>
    <!-- 1.1 Font size -->
    <string name="font_size_title">Font size</string>
    <string name="saved_font_size" translatable="false">font_size</string>
    <string name="default_font_size" translatable="false">12</string>
    <!-- 1.2 Font bold -->
    <string name="font_bold_title">Bold font</string>
    <string name="saved_font_bold" translatable="false">font_bold</string>
    <string name="default_font_bold" translatable="false">false</string>
    <!-- 1.3 Font color -->
    <string name="font_color_title">Font color</string>
    <string name="saved_font_color" translatable="false">font_color</string>
    <string name="default_font_color" translatable="false">colorWhite</string>
    <!-- 1.4 Background color -->
    <string name="background_color_title">Background color</string>
    <string name="saved_background_color" translatable="false">background_color</string>
    <string name="default_background_color" translatable="false">colorBlack</string>
    <!-- Colors -->
    <string name="color_auto_foreground">System</string>
    <string name="color_auto_background">System</string>
    <string name="color_white">White</string>
    <string name="color_gray_light">Light gray</string>
    <string name="color_gray">Gray</string>
    <string name="color_black">Black</string>
    <string name="color_blue_light">Light blue</string>
    <string name="color_blue_deep">Deep blue</string>
    <string name="color_blue_dark">Dark blue</string>
    <string name="color_green_light">Light green</string>
    <string name="color_green_dark">Dark green</string>
    <string name="color_red_light">Light red</string>
    <string name="color_red_dark">Dark red</string>
    <string name="color_orange_light">Light orange</string>
    <string name="color_orange_dark">Dark orange</string>
    <string name="color_purple">Purple</string>
    <!-- 1.5 Background transparency -->
    <string name="background_transparency_title">Background transparency</string>
    <string name="saved_background_transparency" translatable="false">background_transparency</string>
    <string name="default_background_transparency" translatable="false">100</string>

    <!-- 2. Date preferences -->
    <string name="date_header">Date rendering</string>
    <!-- 2.1 Sentence mode -->
    <string name="date_sentence_mode_title">Sentence mode</string>
    <string name="saved_date_sentence_mode" translatable="false">sentence_mode</string>
    <string name="default_date_sentence_mode" translatable="false">false</string>
    <!-- 2.2 Display week day -->
    <string name="date_week_day_display_title">Display week day</string>
    <string name="saved_date_week_day_display" translatable="false">week_day_display</string>
    <string name="default_date_week_day_display" translatable="false">false</string>
    <!-- 2.3 Display year -->
    <string name="date_year_display_title">Display year</string>
    <string name="saved_date_year_display" translatable="false">year_display</string>
    <string name="default_date_year_display" translatable="false">true</string>
    <!-- 2.4 Year reference -->
    <string name="date_year_reference_title">Year reference</string>
    <string name="saved_date_year_reference" translatable="false">year_reference</string>
    <string name="default_date_year_reference" translatable="false">ANNO_DOMINI</string>
    <string name="year_reference_anno_domini">Anno Domini</string>
    <string name="year_reference_rome_fondation">Founding of Rome</string>
    <!-- 2.5 Shorten era -->
    <string name="date_shorten_era_display_title">Shorten era</string>
    <string name="saved_date_shorten_era_display" translatable="false">shorten_era</string>
    <string name="default_date_shorten_era_display" translatable="false">true</string>
    <!-- 2.6 Nones -->
    <string name="current_nones_title">Nones</string>
    <string name="saved_current_nones" translatable="false">current_nones</string>
    <string name="default_current_nones" translatable="false">false</string>
    <!-- 2.7 Ides -->
    <string name="current_ides_title">Ides</string>
    <string name="saved_current_ides" translatable="false">current_ides</string>
    <string name="default_current_ides" translatable="false">false</string>

    <!-- 3. Force Latin -->
    <string name="force_latin_header">Language</string>
    <string name="force_latin">Latin</string>
    <string name="force_latin_on">Latin</string>
    <string name="force_latin_off">System</string>
    <string name="saved_force_latin" translatable="false">force_latin</string>
    <string name="default_force_latin" translatable="false">false</string>
    <string name="dialog_day_of_month">Day</string>
    <string name="dialog_month">Month</string>

    <!-- 4. Notifications -->
    <string name="notifications_header">Notifications</string>
    <!-- 4.1 Founding of Rome -->
    <string name="rome_founding_header">Founding of Rome anniversary</string>
    <string name="saved_rome_founding" translatable="false">alert_rome_founding</string>
    <string name="default_rome_founding" translatable="false">false</string>
    <!-- 4.2 Nones -->
    <string name="nones_header">Nones day</string>
    <string name="saved_nones" translatable="false">alert_nones</string>
    <string name="default_nones" translatable="false">false</string>
    <!-- 4.3 Ides -->
    <string name="ides_header">Ides day</string>
    <string name="saved_ides" translatable="false">alert_ides</string>
    <string name="default_ides" translatable="false">false</string>
</resources>
