<!--
Copyright 2019 Xavier Freyburger

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

   http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- 2. Date settings -->
    <PreferenceCategory app:title="@string/date_header">

        <!-- 2.1 Sentence mode -->
        <SwitchPreferenceCompat
            app:singleLineTitle="false"
            app:defaultValue="@string/default_date_sentence_mode"
            app:key="@string/saved_date_sentence_mode"
            app:title="@string/date_sentence_mode_title" />

        <!-- 2.2 Display week day -->
        <SwitchPreferenceCompat
            app:singleLineTitle="false"
            app:defaultValue="@string/default_date_week_day_display"
            app:key="@string/saved_date_week_day_display"
            app:title="@string/date_week_day_display_title" />

        <!-- 2.3 Display year -->
        <SwitchPreferenceCompat
            app:singleLineTitle="false"
            app:defaultValue="@string/default_date_year_display"
            app:key="@string/saved_date_year_display"
            app:title="@string/date_year_display_title" />

        <!-- 2.4 Year reference -->
        <ListPreference
            app:defaultValue="@string/default_date_year_reference"
            app:dependency="@string/saved_date_year_display"
            app:entries="@array/date_year_reference_entries"
            app:entryValues="@array/date_year_reference_values"
            app:key="@string/saved_date_year_reference"
            app:title="@string/date_year_reference_title"
            app:useSimpleSummaryProvider="true" />

        <!-- 2.5 Shorten era -->
        <SwitchPreferenceCompat
            app:singleLineTitle="false"
            app:defaultValue="@string/default_date_shorten_era_display"
            app:key="@string/saved_date_shorten_era_display"
            app:title="@string/date_shorten_era_display_title" />

        <!-- 2.6 Nones -->
        <SwitchPreferenceCompat
            app:singleLineTitle="false"
            app:defaultValue="@string/default_current_nones"
            app:key="@string/saved_current_nones"
            app:title="@string/current_nones_title" />

        <!-- 2.7 Ides -->
        <SwitchPreferenceCompat
            app:singleLineTitle="false"
            app:defaultValue="@string/default_current_ides"
            app:key="@string/saved_current_ides"
            app:title="@string/current_ides_title" />
    </PreferenceCategory>

    <!-- 1. Widget font -->
    <PreferenceCategory app:title="@string/widget_font_header">
        <!-- 1.1 Font size -->
        <ListPreference
            app:defaultValue="@string/default_font_size"
            app:entries="@array/font_size_entries"
            app:entryValues="@array/font_size_values"
            app:key="@string/saved_font_size"
            app:title="@string/font_size_title"
            app:useSimpleSummaryProvider="true" />

        <!-- 1.2 Font color -->
        <ListPreference
            app:defaultValue="@string/default_font_color"
            app:entries="@array/font_color_entries"
            app:entryValues="@array/font_color_values"
            app:key="@string/saved_font_color"
            app:title="@string/font_color_title"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <!-- 3. Force latin language
        app:summaryOn="@string/force_latin_on"
        app:summaryOff="@string/force_latin_off" -->
    <PreferenceCategory app:title="@string/force_latin_header">
        <SwitchPreferenceCompat
            app:singleLineTitle="false"
            app:defaultValue="@string/default_force_latin"
            app:key="@string/saved_force_latin"
            app:title="@string/force_latin" />
    </PreferenceCategory>

    <!-- 4. Notifications -->
    <PreferenceCategory app:title="@string/notifications_header">
        <!-- 4.1 Founding of Rome -->
        <SwitchPreferenceCompat
            app:singleLineTitle="false"
            app:defaultValue="@string/default_rome_founding"
            app:key="@string/saved_rome_founding"
            app:title="@string/rome_founding_header" />
        <!-- 4.2 Nones -->
        <SwitchPreferenceCompat
            app:singleLineTitle="false"
            app:defaultValue="@string/default_nones"
            app:key="@string/saved_nones"
            app:title="@string/nones_header" />
        <!-- 4.3 Ides -->
        <SwitchPreferenceCompat
            app:singleLineTitle="false"
            app:defaultValue="@string/default_ides"
            app:key="@string/saved_ides"
            app:title="@string/ides_header" />
    </PreferenceCategory>
</androidx.preference.PreferenceScreen>
